# quote-scrap

./: Dockerfile  app.py  pyproject.toml
templates/: index.html
