[tool.poetry]
name = "quote-scrap"
version = "0.1.0"
description = ""
authors = ["Rohit <RohitSinghEmail@protonmail.com>"]
readme = "README.md"
packages = [{include = "quote_scrap"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
